Fixed overflow for topbar icons

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -51,6 +51,7 @@
                     transform: scale(1.15);
                 }
                 .icon{
+                    overflow: visible;
                     font-size: 18px;
                     margin-right: 5px;
                 }
